# Paycif

./: AGENTS.md  CLAUDE.md  README.md  check_outbox.sql  design.md  gen_mtls_certs.sh  privacy.md  terms.md  test-function.sh
.jules/: bolt.md
back-end/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.redis.yml  docker-compose.yml  go.mod  go.sum  schema.sql  schema_upgrade_v2.sql  schema_upgrade_v3_sumsub.sql  start-all.sh  (+4 more)
back-end/rust/accounting-core/: Cargo.toml  README.md  build.rs
back-end/rust/accounting-core/.cargo_home/: .global-cache
back-end/rust/accounting-core/.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: postgres-protocol-0.6.10.crate  postgres-types-0.2.12.crate
back-end/rust/accounting-core/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/de/ra/: deranged
back-end/rust/accounting-core/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/po/st/: postgres-protocol  postgres-types
back-end/rust/accounting-core/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/re/nd/: rend
back-end/rust/accounting-core/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/rk/yv/: rkyv  rkyv_derive
back-end/rust/accounting-core/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/wh/oa/: whoami
back-end/rust/accounting-core/benches/: transfer_benchmark.rs
back-end/rust/accounting-core/proto/: accounting.proto
back-end/rust/accounting-core/src/: integration_tests.rs  limit_cache.rs  main.rs  metrics.rs  payout_engine.rs  server_tls.rs  transfer.rs
back-end/rust/fx-engine/: Cargo.toml  Dockerfile  README.md  build.rs  run-fx-engine.sh  test-memory.sh  watch-fx.sh
back-end/rust/fx-engine/.cargo_home/: .global-cache
back-end/rust/fx-engine/.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: rust_decimal_macros-1.40.0.crate
back-end/rust/fx-engine/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/bo/rs/: borsh-derive
back-end/rust/fx-engine/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/re/di/: redis
back-end/rust/fx-engine/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ru/st/: rust_decimal_macros
back-end/rust/fx-engine/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/se/cu/: security-framework
back-end/rust/fx-engine/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/to/ni/: tonic  tonic-build
back-end/rust/fx-engine/.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal_macros-1.40.0/: .cargo_vcs_info.json  Cargo.toml
back-end/rust/fx-engine/src/: fx.rs  limit_cache.rs  main.rs  memory_tests.rs  rate_provider.rs  redis_cache.rs
back-end/rust/payload-worker/: Cargo.toml
back-end/rust/payload-worker/.cargo_home/: .global-cache
back-end/rust/payload-worker/.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: halfbrown-0.2.5.crate  simd-json-0.13.11.crate  value-trait-0.8.1.crate
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/r/: rsa
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ar/c-/: arc-swap
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/fu/tu/: futures
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ha/lf/: halfbrown
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/na/ti/: native-tls
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/se/cu/: security-framework-sys
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/si/md/: simd-json
back-end/rust/payload-worker/.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/va/lu/: value-trait
back-end/rust/payload-worker/src/: main.rs
(+296 files in other folders)
