[package]
name = "accounting_core"
version = "0.2.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.33", features = ["db-postgres", "serde"] }
rust_decimal_macros = "1.33"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "rust_decimal", "uuid", "time", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
jemallocator = { version = "0.5", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio-stream = "0.1"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
parking_lot = "0.12"
crossbeam = "0.8"
async-trait = "0.1"

[features]
default = ["jemalloc"]
jemalloc = ["jemallocator"]

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "transfer_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
mockall = "0.13"
